plugins {
    id 'java'
}

group = 'io.github.tanguygab'
version = '1.0.0'

sourceCompatibility = '16'
targetCompatibility = '16'

repositories {
    mavenCentral()
    maven {
        name = 'spigotmc-repo'
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
    compileOnly 'net.luckperms:api:5.3'
    compileOnly files('../TAB-3.0.jar','../nms-1.17.1.jar')
}
